add_executable(boj2798 boj2798.cpp)
add_executable(boj2231 boj2231.cpp)
add_executable(boj10872 boj10872.cpp)
add_executable(boj10870 boj10870.cpp)
add_executable(boj1780 boj1780.cpp)
add_executable(boj1074 boj1074.cpp)
add_executable(boj6549 boj6549.cpp)
add_executable(boj12486 boj12486.cpp)
add_executable(boj11726 boj11726.cpp)
add_executable(boj11726-2 boj11726-2.cpp)
add_executable(boj1932 boj1932.cpp)
add_executable(boj11053 boj11053.cpp)
add_executable(boj14501 boj14501.cpp)
add_executable(boj1010 boj1010.cpp)
add_executable(boj1406 boj1406.cpp)
add_executable(boj19644 boj19644.cpp)
add_executable(boj2841 boj2841.cpp)
add_executable(boj15678 boj15678.cpp)
add_executable(boj2263 boj2263.cpp)
add_executable(boj2250 boj2250.cpp)
add_executable(boj2533 boj2533.cpp)
add_executable(boj2533-2 boj2533-2.cpp)
add_executable(boj13016 boj13016.cpp)
add_executable(boj1766 boj1766.cpp)
add_executable(boj1781 boj1781.cpp)
add_executable(boj3653 boj3653.cpp)
add_executable(boj3653-2 boj3653-2.cpp)
add_executable(boj2517 boj2517.cpp)
add_executable(boj14725 boj14725.cpp)
add_executable(boj1717 boj1717.cpp)
add_executable(boj5052 boj5052.cpp)
add_executable(boj1976 boj1976.cpp)