project(lec_29-30)

add_executable(code29_1 code29_1.cpp)
add_executable(code29_3 code29_3.cpp)
add_executable(code29_5 code29_5.cpp)
add_executable(code29_9 code29_9.cpp)
add_executable(code30_1 code30_1.cpp)
add_executable(code30_2 code30_2.cpp)
add_executable(code30_4 code30_4.cpp)
add_executable(code30_5 code30_5.cpp)
add_executable(code30_6 code30_6.cpp)
add_executable(code30_9 code30_9.cpp)
add_executable(code30_10 code30_10.cpp)
